--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
+    "npm": "^10.5.2",
     "react-router-dom": "^6.22.3"
   }
 }
